// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`warpText snapshot tests warp "textArchDown" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.18,
        "y": 8.5,
      },
      {
        "x": 52.09,
        "y": 9.98,
      },
      {
        "x": 51.96,
        "y": 34.2,
      },
      {
        "x": 40.2,
        "y": 37.72,
      },
    ],
    "scale": 1.173,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.09,
        "y": 9.98,
      },
      {
        "x": 64.04,
        "y": 11.1,
      },
      {
        "x": 63.77,
        "y": 30.86,
      },
      {
        "x": 51.96,
        "y": 34.2,
      },
    ],
    "scale": 1.055,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.04,
        "y": 11.1,
      },
      {
        "x": 76.01,
        "y": 11.88,
      },
      {
        "x": 75.68,
        "y": 27.94,
      },
      {
        "x": 63.77,
        "y": 30.86,
      },
    ],
    "scale": 0.953,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.01,
        "y": 11.88,
      },
      {
        "x": 88,
        "y": 12.34,
      },
      {
        "x": 87.76,
        "y": 25.81,
      },
      {
        "x": 75.68,
        "y": 27.94,
      },
    ],
    "scale": 0.875,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88,
        "y": 12.34,
      },
      {
        "x": 100,
        "y": 12.5,
      },
      {
        "x": 100,
        "y": 25.01,
      },
      {
        "x": 87.76,
        "y": 25.81,
      },
    ],
    "scale": 0.83,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 12.5,
      },
      {
        "x": 112,
        "y": 12.34,
      },
      {
        "x": 112.24,
        "y": 25.81,
      },
      {
        "x": 100,
        "y": 25.01,
      },
    ],
    "scale": 0.83,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 112,
        "y": 12.34,
      },
      {
        "x": 123.99,
        "y": 11.88,
      },
      {
        "x": 124.32,
        "y": 27.94,
      },
      {
        "x": 112.24,
        "y": 25.81,
      },
    ],
    "scale": 0.875,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.99,
        "y": 11.88,
      },
      {
        "x": 135.97,
        "y": 11.1,
      },
      {
        "x": 136.24,
        "y": 30.86,
      },
      {
        "x": 124.32,
        "y": 27.94,
      },
    ],
    "scale": 0.953,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.97,
        "y": 11.1,
      },
      {
        "x": 147.91,
        "y": 9.98,
      },
      {
        "x": 148.05,
        "y": 34.2,
      },
      {
        "x": 136.24,
        "y": 30.86,
      },
    ],
    "scale": 1.055,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.91,
        "y": 9.98,
      },
      {
        "x": 159.82,
        "y": 8.5,
      },
      {
        "x": 159.8,
        "y": 37.72,
      },
      {
        "x": 148.05,
        "y": 34.2,
      },
    ],
    "scale": 1.173,
  },
]
`;

exports[`warpText snapshot tests warp "textArchUp" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.7,
        "y": -17.15,
      },
      {
        "x": 52.35,
        "y": -20.02,
      },
      {
        "x": 53.83,
        "y": 41.83,
      },
      {
        "x": 42.35,
        "y": 43.53,
      },
    ],
    "scale": 2.024,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.35,
        "y": -20.02,
      },
      {
        "x": 64.14,
        "y": -22.22,
      },
      {
        "x": 65.32,
        "y": 40.22,
      },
      {
        "x": 53.83,
        "y": 41.83,
      },
    ],
    "scale": 2.046,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.14,
        "y": -22.22,
      },
      {
        "x": 76.04,
        "y": -23.77,
      },
      {
        "x": 76.84,
        "y": 38.84,
      },
      {
        "x": 65.32,
        "y": 40.22,
      },
    ],
    "scale": 2.055,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.04,
        "y": -23.77,
      },
      {
        "x": 88.01,
        "y": -24.69,
      },
      {
        "x": 88.4,
        "y": 37.87,
      },
      {
        "x": 76.84,
        "y": 38.84,
      },
    ],
    "scale": 2.056,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.01,
        "y": -24.69,
      },
      {
        "x": 100,
        "y": -24.99,
      },
      {
        "x": 100,
        "y": 37.5,
      },
      {
        "x": 88.4,
        "y": 37.87,
      },
    ],
    "scale": 2.055,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": -24.99,
      },
      {
        "x": 112,
        "y": -24.69,
      },
      {
        "x": 111.6,
        "y": 37.87,
      },
      {
        "x": 100,
        "y": 37.5,
      },
    ],
    "scale": 2.055,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 112,
        "y": -24.69,
      },
      {
        "x": 123.96,
        "y": -23.77,
      },
      {
        "x": 123.16,
        "y": 38.84,
      },
      {
        "x": 111.6,
        "y": 37.87,
      },
    ],
    "scale": 2.056,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.96,
        "y": -23.77,
      },
      {
        "x": 135.86,
        "y": -22.22,
      },
      {
        "x": 134.68,
        "y": 40.23,
      },
      {
        "x": 123.16,
        "y": 38.84,
      },
    ],
    "scale": 2.055,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.86,
        "y": -22.22,
      },
      {
        "x": 147.66,
        "y": -20.02,
      },
      {
        "x": 146.18,
        "y": 41.83,
      },
      {
        "x": 134.68,
        "y": 40.23,
      },
    ],
    "scale": 2.046,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.66,
        "y": -20.02,
      },
      {
        "x": 159.31,
        "y": -17.15,
      },
      {
        "x": 157.65,
        "y": 43.53,
      },
      {
        "x": 146.18,
        "y": 41.83,
      },
    ],
    "scale": 2.024,
  },
]
`;

exports[`warpText snapshot tests warp "textChevron" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.3,
        "y": 5.97,
      },
      {
        "x": 52.24,
        "y": 4.78,
      },
      {
        "x": 52.24,
        "y": 44.78,
      },
      {
        "x": 40.3,
        "y": 45.97,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.24,
        "y": 4.78,
      },
      {
        "x": 64.18,
        "y": 3.58,
      },
      {
        "x": 64.18,
        "y": 43.58,
      },
      {
        "x": 52.24,
        "y": 44.78,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.18,
        "y": 3.58,
      },
      {
        "x": 76.12,
        "y": 2.39,
      },
      {
        "x": 76.12,
        "y": 42.39,
      },
      {
        "x": 64.18,
        "y": 43.58,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.12,
        "y": 2.39,
      },
      {
        "x": 88.06,
        "y": 1.19,
      },
      {
        "x": 88.06,
        "y": 41.19,
      },
      {
        "x": 76.12,
        "y": 42.39,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.06,
        "y": 1.19,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 40,
      },
      {
        "x": 88.06,
        "y": 41.19,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 111.94,
        "y": 1.19,
      },
      {
        "x": 111.94,
        "y": 41.19,
      },
      {
        "x": 100,
        "y": 40,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 111.94,
        "y": 1.19,
      },
      {
        "x": 123.88,
        "y": 2.39,
      },
      {
        "x": 123.88,
        "y": 42.39,
      },
      {
        "x": 111.94,
        "y": 41.19,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.88,
        "y": 2.39,
      },
      {
        "x": 135.82,
        "y": 3.58,
      },
      {
        "x": 135.82,
        "y": 43.58,
      },
      {
        "x": 123.88,
        "y": 42.39,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.82,
        "y": 3.58,
      },
      {
        "x": 147.76,
        "y": 4.78,
      },
      {
        "x": 147.76,
        "y": 44.78,
      },
      {
        "x": 135.82,
        "y": 43.58,
      },
    ],
    "scale": 1.5,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.76,
        "y": 4.78,
      },
      {
        "x": 159.7,
        "y": 5.97,
      },
      {
        "x": 159.7,
        "y": 45.97,
      },
      {
        "x": 147.76,
        "y": 44.78,
      },
    ],
    "scale": 1.5,
  },
]
`;

exports[`warpText snapshot tests warp "textFadeRight" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.12,
        "y": 2.51,
      },
      {
        "x": 52.09,
        "y": 3.26,
      },
      {
        "x": 52.09,
        "y": 46.74,
      },
      {
        "x": 40.12,
        "y": 47.49,
      },
    ],
    "scale": 1.606,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.09,
        "y": 3.26,
      },
      {
        "x": 64.07,
        "y": 4,
      },
      {
        "x": 64.07,
        "y": 46,
      },
      {
        "x": 52.09,
        "y": 46.74,
      },
    ],
    "scale": 1.568,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.07,
        "y": 4,
      },
      {
        "x": 76.05,
        "y": 4.75,
      },
      {
        "x": 76.05,
        "y": 45.25,
      },
      {
        "x": 64.07,
        "y": 46,
      },
    ],
    "scale": 1.531,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.05,
        "y": 4.75,
      },
      {
        "x": 88.02,
        "y": 5.5,
      },
      {
        "x": 88.02,
        "y": 44.5,
      },
      {
        "x": 76.05,
        "y": 45.25,
      },
    ],
    "scale": 1.494,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.02,
        "y": 5.5,
      },
      {
        "x": 100,
        "y": 6.25,
      },
      {
        "x": 100,
        "y": 43.75,
      },
      {
        "x": 88.02,
        "y": 44.5,
      },
    ],
    "scale": 1.456,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 6.25,
      },
      {
        "x": 111.98,
        "y": 7,
      },
      {
        "x": 111.98,
        "y": 43,
      },
      {
        "x": 100,
        "y": 43.75,
      },
    ],
    "scale": 1.419,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 111.98,
        "y": 7,
      },
      {
        "x": 123.95,
        "y": 7.75,
      },
      {
        "x": 123.95,
        "y": 42.25,
      },
      {
        "x": 111.98,
        "y": 43,
      },
    ],
    "scale": 1.381,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.95,
        "y": 7.75,
      },
      {
        "x": 135.93,
        "y": 8.5,
      },
      {
        "x": 135.93,
        "y": 41.5,
      },
      {
        "x": 123.95,
        "y": 42.25,
      },
    ],
    "scale": 1.344,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.93,
        "y": 8.5,
      },
      {
        "x": 147.91,
        "y": 9.24,
      },
      {
        "x": 147.91,
        "y": 40.76,
      },
      {
        "x": 135.93,
        "y": 41.5,
      },
    ],
    "scale": 1.307,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.91,
        "y": 9.24,
      },
      {
        "x": 159.88,
        "y": 9.99,
      },
      {
        "x": 159.88,
        "y": 40.01,
      },
      {
        "x": 147.91,
        "y": 40.76,
      },
    ],
    "scale": 1.269,
  },
]
`;

exports[`warpText snapshot tests warp "textInflate" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.06,
        "y": -5.22,
      },
      {
        "x": 52.03,
        "y": -6.08,
      },
      {
        "x": 52.03,
        "y": 56.08,
      },
      {
        "x": 40.06,
        "y": 55.22,
      },
    ],
    "scale": 2.032,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.03,
        "y": -6.08,
      },
      {
        "x": 64.01,
        "y": -6.71,
      },
      {
        "x": 64.01,
        "y": 56.71,
      },
      {
        "x": 52.03,
        "y": 56.08,
      },
    ],
    "scale": 2.07,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.01,
        "y": -6.71,
      },
      {
        "x": 76,
        "y": -7.16,
      },
      {
        "x": 76,
        "y": 57.16,
      },
      {
        "x": 64.01,
        "y": 56.71,
      },
    ],
    "scale": 2.097,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76,
        "y": -7.16,
      },
      {
        "x": 88,
        "y": -7.41,
      },
      {
        "x": 88,
        "y": 57.41,
      },
      {
        "x": 76,
        "y": 57.16,
      },
    ],
    "scale": 2.114,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88,
        "y": -7.41,
      },
      {
        "x": 100,
        "y": -7.5,
      },
      {
        "x": 100,
        "y": 57.5,
      },
      {
        "x": 88,
        "y": 57.41,
      },
    ],
    "scale": 2.123,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": -7.5,
      },
      {
        "x": 112,
        "y": -7.41,
      },
      {
        "x": 112,
        "y": 57.41,
      },
      {
        "x": 100,
        "y": 57.5,
      },
    ],
    "scale": 2.123,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 112,
        "y": -7.41,
      },
      {
        "x": 124,
        "y": -7.16,
      },
      {
        "x": 124,
        "y": 57.16,
      },
      {
        "x": 112,
        "y": 57.41,
      },
    ],
    "scale": 2.114,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 124,
        "y": -7.16,
      },
      {
        "x": 135.99,
        "y": -6.71,
      },
      {
        "x": 135.99,
        "y": 56.71,
      },
      {
        "x": 124,
        "y": 57.16,
      },
    ],
    "scale": 2.097,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.99,
        "y": -6.71,
      },
      {
        "x": 147.97,
        "y": -6.08,
      },
      {
        "x": 147.97,
        "y": 56.08,
      },
      {
        "x": 135.99,
        "y": 56.71,
      },
    ],
    "scale": 2.07,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.97,
        "y": -6.08,
      },
      {
        "x": 159.94,
        "y": -5.22,
      },
      {
        "x": 159.94,
        "y": 55.22,
      },
      {
        "x": 147.97,
        "y": 56.08,
      },
    ],
    "scale": 2.032,
  },
]
`;

exports[`warpText snapshot tests warp "textSlantUp" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.12,
        "y": 9.99,
      },
      {
        "x": 52.09,
        "y": 9.24,
      },
      {
        "x": 52.09,
        "y": 46.74,
      },
      {
        "x": 40.12,
        "y": 47.49,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.09,
        "y": 9.24,
      },
      {
        "x": 64.07,
        "y": 8.5,
      },
      {
        "x": 64.07,
        "y": 46,
      },
      {
        "x": 52.09,
        "y": 46.74,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.07,
        "y": 8.5,
      },
      {
        "x": 76.05,
        "y": 7.75,
      },
      {
        "x": 76.05,
        "y": 45.25,
      },
      {
        "x": 64.07,
        "y": 46,
      },
    ],
    "scale": 1.437,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.05,
        "y": 7.75,
      },
      {
        "x": 88.02,
        "y": 7,
      },
      {
        "x": 88.02,
        "y": 44.5,
      },
      {
        "x": 76.05,
        "y": 45.25,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.02,
        "y": 7,
      },
      {
        "x": 100,
        "y": 6.25,
      },
      {
        "x": 100,
        "y": 43.75,
      },
      {
        "x": 88.02,
        "y": 44.5,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 6.25,
      },
      {
        "x": 111.98,
        "y": 5.5,
      },
      {
        "x": 111.98,
        "y": 43,
      },
      {
        "x": 100,
        "y": 43.75,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 111.98,
        "y": 5.5,
      },
      {
        "x": 123.95,
        "y": 4.75,
      },
      {
        "x": 123.95,
        "y": 42.25,
      },
      {
        "x": 111.98,
        "y": 43,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.95,
        "y": 4.75,
      },
      {
        "x": 135.93,
        "y": 4,
      },
      {
        "x": 135.93,
        "y": 41.5,
      },
      {
        "x": 123.95,
        "y": 42.25,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.93,
        "y": 4,
      },
      {
        "x": 147.91,
        "y": 3.26,
      },
      {
        "x": 147.91,
        "y": 40.76,
      },
      {
        "x": 135.93,
        "y": 41.5,
      },
    ],
    "scale": 1.438,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.91,
        "y": 3.26,
      },
      {
        "x": 159.88,
        "y": 2.51,
      },
      {
        "x": 159.88,
        "y": 40.01,
      },
      {
        "x": 147.91,
        "y": 40.76,
      },
    ],
    "scale": 1.437,
  },
]
`;

exports[`warpText snapshot tests warp "textTriangle" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.3,
        "y": 5.97,
      },
      {
        "x": 52.24,
        "y": 4.78,
      },
      {
        "x": 52.24,
        "y": 50,
      },
      {
        "x": 40.3,
        "y": 50,
      },
    ],
    "scale": 1.614,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.24,
        "y": 4.78,
      },
      {
        "x": 64.18,
        "y": 3.58,
      },
      {
        "x": 64.18,
        "y": 50,
      },
      {
        "x": 52.24,
        "y": 50,
      },
    ],
    "scale": 1.644,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.18,
        "y": 3.58,
      },
      {
        "x": 76.12,
        "y": 2.39,
      },
      {
        "x": 76.12,
        "y": 50,
      },
      {
        "x": 64.18,
        "y": 50,
      },
    ],
    "scale": 1.674,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.12,
        "y": 2.39,
      },
      {
        "x": 88.06,
        "y": 1.19,
      },
      {
        "x": 88.06,
        "y": 50,
      },
      {
        "x": 76.12,
        "y": 50,
      },
    ],
    "scale": 1.704,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.06,
        "y": 1.19,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 50,
      },
      {
        "x": 88.06,
        "y": 50,
      },
    ],
    "scale": 1.734,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 111.94,
        "y": 1.19,
      },
      {
        "x": 111.94,
        "y": 50,
      },
      {
        "x": 100,
        "y": 50,
      },
    ],
    "scale": 1.734,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 111.94,
        "y": 1.19,
      },
      {
        "x": 123.88,
        "y": 2.39,
      },
      {
        "x": 123.88,
        "y": 50,
      },
      {
        "x": 111.94,
        "y": 50,
      },
    ],
    "scale": 1.704,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.88,
        "y": 2.39,
      },
      {
        "x": 135.82,
        "y": 3.58,
      },
      {
        "x": 135.82,
        "y": 50,
      },
      {
        "x": 123.88,
        "y": 50,
      },
    ],
    "scale": 1.674,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.82,
        "y": 3.58,
      },
      {
        "x": 147.76,
        "y": 4.78,
      },
      {
        "x": 147.76,
        "y": 50,
      },
      {
        "x": 135.82,
        "y": 50,
      },
    ],
    "scale": 1.644,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.76,
        "y": 4.78,
      },
      {
        "x": 159.7,
        "y": 5.97,
      },
      {
        "x": 159.7,
        "y": 50,
      },
      {
        "x": 147.76,
        "y": 50,
      },
    ],
    "scale": 1.614,
  },
]
`;

exports[`warpText snapshot tests warp "textWave1" snapshot 1`] = `
[
  {
    "char": "T",
    "corners": [
      {
        "x": 40.82,
        "y": 7.59,
      },
      {
        "x": 52.81,
        "y": 7.83,
      },
      {
        "x": 52.81,
        "y": 57.83,
      },
      {
        "x": 40.82,
        "y": 57.59,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 52.81,
        "y": 7.83,
      },
      {
        "x": 64.79,
        "y": 7.17,
      },
      {
        "x": 64.79,
        "y": 57.17,
      },
      {
        "x": 52.81,
        "y": 57.83,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "x",
    "corners": [
      {
        "x": 64.79,
        "y": 7.17,
      },
      {
        "x": 76.69,
        "y": 5.62,
      },
      {
        "x": 76.69,
        "y": 55.62,
      },
      {
        "x": 64.79,
        "y": 57.17,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 76.69,
        "y": 5.62,
      },
      {
        "x": 88.44,
        "y": 3.21,
      },
      {
        "x": 88.44,
        "y": 53.21,
      },
      {
        "x": 76.69,
        "y": 55.62,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "E",
    "corners": [
      {
        "x": 88.44,
        "y": 3.21,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 50,
      },
      {
        "x": 88.44,
        "y": 53.21,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 111.56,
        "y": -3.21,
      },
      {
        "x": 111.56,
        "y": 46.79,
      },
      {
        "x": 100,
        "y": 50,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "f",
    "corners": [
      {
        "x": 111.56,
        "y": -3.21,
      },
      {
        "x": 123.31,
        "y": -5.62,
      },
      {
        "x": 123.31,
        "y": 44.38,
      },
      {
        "x": 111.56,
        "y": 46.79,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "e",
    "corners": [
      {
        "x": 123.31,
        "y": -5.62,
      },
      {
        "x": 135.21,
        "y": -7.17,
      },
      {
        "x": 135.21,
        "y": 42.83,
      },
      {
        "x": 123.31,
        "y": 44.38,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "c",
    "corners": [
      {
        "x": 135.21,
        "y": -7.17,
      },
      {
        "x": 147.19,
        "y": -7.83,
      },
      {
        "x": 147.19,
        "y": 42.17,
      },
      {
        "x": 135.21,
        "y": 42.83,
      },
    ],
    "scale": 1.75,
  },
  {
    "char": "t",
    "corners": [
      {
        "x": 147.19,
        "y": -7.83,
      },
      {
        "x": 159.19,
        "y": -7.59,
      },
      {
        "x": 159.19,
        "y": 42.41,
      },
      {
        "x": 147.19,
        "y": 42.17,
      },
    ],
    "scale": 1.75,
  },
]
`;
